chore: migrate to Java 21 and modernze API - Migrated project to Java 21 (Update build configuration and dependencies) - Added Springdoc OpenAPI (Swagger UI) for API documentation - Integrated Spring Boot Actuator with basic endpoints - Introduced sealed hierarchy with custom exceptions for external API failures